--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,12 @@
 # main links links
 main:
+
+  - title: "About me"
+    url: /../
+
+  - title: "Pointer"
+    url: /pointer/
+    
   # - title: "Publications"
   #   url: /publications/
 
