--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Wang Wenhao"
   avatar           : "profile.png"
-  bio              : "An overthinker"
+  bio              : "Stay hungry, stay foolish."
   location         : "Hong Kong"
   employer         :
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
