--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,6 +26,5 @@ main:
   - title: "Guide"
     url: /markdown/
 
-
-  # - title: "Pointer"
-  #   url: /pointer/
+  - title: "Pointer"
+    url: /pointer/
