--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+# theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "dark"
+
 locale                   : "en-US"
 title                    : "Wenhao's Homepage"
 title_separator          : "-"
