--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,10 +21,9 @@ main:
     
   - title: "CV"
     url: /cv/
-
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
 
   - title: "Pointer"
     url: /pointer/
