--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  Medium           : "https://medium.com/@haostarrr"
 
 
 # Reading Files
