--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,26 +1,28 @@
 # main links links
 main:
-
   - title: "About me"
     url: /../
-    
+
   # - title: "Publications"
   #   url: /publications/
 
   # - title: "Talks"
-  #   url: /talks/    
-    
+  #   url: /talks/
+
   # - title: "Portfolio"
   #   url: /portfolio/
-        
+
   # - title: "Blog Posts"
   #   url: /year-archive/
-    
+
   - title: "CV"
     url: /cv/
-    
+
+  - title: "Projects"
+    url: /projects/
+
   - title: "Booklist"
-    url: /booklist/    
+    url: /booklist/
 
   # - title: "Guide"
   #   url: /markdown/
