--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social:
 analytics:
   provider: "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id:
+    tracking_id: G-NRD3GCKTKJ
 
 # Site Author
 author:
@@ -299,3 +299,7 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# Mermaid settings
+mermaid:
+  src: 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js'
