--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,9 +3,6 @@ main:
   - title: "About me"
     url: /../
 
-  # - title: "Publications"
-  #   url: /publications/
-
   # - title: "Talks"
   #   url: /talks/
 
@@ -17,6 +14,9 @@ main:
 
   - title: "CV"
     url: /cv/
+
+  - title: "Research"
+    url: /research/
 
   - title: "Projects"
     url: /projects/
